# kspecdr

./: .gitignore  README.md  make_mock_frame.ipynb  make_mock_frame_bkp.ipynb  pyproject.toml  requirements.txt
data/arc_tables/: HgArNeKrCd.arc  cd.arc  hgar.arc  kr.arc  ne.arc
docs/: conf.py  index.rst  installation.md  package_overview.md  quickstart.md  reduction_steps.md  requirements.txt
docs/examples/: basic_usage.ipynb  wavecal_test.ipynb
notebooks/: kspec_commissioning_jan26.ipynb  test_arc_20251224.ipynb  test_make_tlm.ipynb
src/kspecdr/: __init__.py  constants.py  reduce_fflat.py  reduce_object.py  tracking.py
src/kspecdr/extract/: __init__.py  make_ex.py  make_red.py  reduce_arc.py
src/kspecdr/inst/: instconfig.py  isoplane.py
src/kspecdr/io/: image.py
src/kspecdr/preproc/: README.md  __init__.py  example_usage.py  make_im.py  preproc.py
src/kspecdr/tlm/: diagnostics.py  fibers.py  interpolate_tlm.py  make_tlm.py  match_fibers.py  trace.py
src/kspecdr/utils/: __init__.py  args.py  fiber.py
src/kspecdr/wavecal/: __init__.py  arc_io.py  calibrate.py  crosscorr.py  landmarks.py  scrunch.py  wavelets.py
src/kspecdr/z_obsolete/: instconfig.py
tests/: test_landmarks_consistency.py  test_tracking_robustness.py  verify_changes.py
