[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kspecdr"
version = "0.1.0"
description = "A Python package for K-SPEC data reduction pipeline."
authors = [
    { name="Hyeonguk Bahk", email="bahkhyeonguk@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "astropy",
    "PyWavelets"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]
